<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/pewter"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/gray">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_brain"
            android:layout_gravity="center"
            android:tint="@color/jetblack"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                android:hint="Username"
                style="@style/UIEditText"
                android:inputType="text"
                android:layout_marginTop="18dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:hint="@string/email_id"
                style="@style/UIEditText"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:hint="@string/password"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFirstname"
                android:hint="@string/firstname"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLastname"
                android:hint="@string/lastname"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                style="@style/UIEditText"
                android:layout_marginTop="15dp"
                android:background="@color/gray"
                android:text="@string/sign_up"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/UIEditText"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:text="@string/already_have_an_account_sign_in"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>