<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/pewter"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/gray">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_brain"
            android:layout_gravity="center"
            android:tint="@color/jetblack"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:hint="@string/email_id"
            style="@style/UIEditText"
            android:inputType="textEmailAddress"
            android:layout_marginTop="18dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            style="@style/UIEditText"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            style="@style/UIEditText"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            android:text="@string/log_in"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/UIEditText"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/no_account_register_here"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>