<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/pewter"
    android:orientation="vertical">

    <include layout="@layout/toolbar_home_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                android:hint="Username"
                style="@style/UIEditText"
                android:inputType="text"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:hint="@string/email_id"
                style="@style/UIEditText"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:hint="@string/password"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFirstname"
                android:hint="@string/firstname"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLastname"
                android:hint="@string/lastname"
                style="@style/UIEditText"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                style="@style/UIEditText"
                android:layout_marginTop="15dp"
                android:background="@color/gray"
                android:text="Update"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>